--- a/app/views/Game/watcher.scala.html
+++ b/app/views/Game/watcher.scala.html
@@ -1,6 +1,10 @@
-@(board: Board)
+@(board: scrabble.Board)
 
 <html>
+
+    <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/board.css")">
+
+
  <div class="board_wrap">
- 	<div class = "board">@Html(main.app.ui.RenderBoard.render(board))</div>
+ 	<div class = "board">@Html(ui.BoardRenderer.render(board))</div>
 </html>
