--- a/app/views/Game/watcher.scala.html
+++ b/app/views/Game/watcher.scala.html
@@ -1,10 +1,5 @@
 @(board: scrabble.Board)
 
-<html>
-
-    <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/board.css")"/>
-    <link rel="stylesheet" type="text/css" href="@routes.Assets.at("stylesheets/tile.css")"/>
-
-
+@Game.layout("Observer") {
  	<div class="board">@Html(ui.BoardRenderer.render(board))</div>
-</html>
+}
