--- a/static/css/round.css
+++ b/static/css/round.css
@@ -2,3 +2,13 @@
     width: 600px;
     height: 600px;
 }
+
+.rack {
+    height: 40px;
+}
+
+.rack-slot {
+    position: absolute;
+    height: 40px;
+    width: 40px;
+}
