Render buttons for making a move.

--- a/static/css/round.css
+++ b/static/css/round.css
@@ -18,3 +18,12 @@
     height: 40px;
     width: 40px;
 }
+
+.action-buttons {
+    margin-left: 188px;
+    margin-top: 10px;
+}
+
+.submit-move-button {
+    margin-right: 10px;
+}
