chat border and empty chat input box after sending a message.

--- a/static/css/round.css
+++ b/static/css/round.css
@@ -71,6 +71,9 @@ body {
     width: 300px;
     list-style-type: none;
     padding: 0px;
+    padding-left: 10px;
+    padding-top: 10px;
+    border: 1px solid;
 }
 
 .chat-messages {
