--- a/static/css/round.css
+++ b/static/css/round.css
@@ -55,6 +55,12 @@ body {
     padding-left: 25px;
 }
 
+.history {
+    position:relative;
+    padding-top: 15px;
+    margin:auto;
+}
+
 .submit-move-button {
     margin-right: 10px;
 }
