client potential score.

--- a/static/css/round.css
+++ b/static/css/round.css
@@ -39,6 +39,13 @@ body {
     margin-bottom: 10px;
 }
 
+.potential-score {
+    position: relative;
+    width: 150px;
+    margin: auto;
+
+}
+
 .rack-slot {
     position: relative;
     float: left;
