stop the move history going off the end of the page :P.

--- a/static/css/round.css
+++ b/static/css/round.css
@@ -70,6 +70,8 @@ body {
     position:relative;
     padding-top: 15px;
     margin:auto;
+    overflow: auto;
+    max-height: 500px;
 }
 
 .submit-move-button {
