--- a/static/css/round.css
+++ b/static/css/round.css
@@ -39,7 +39,7 @@ body {
     position: relative;
     margin: auto;
     height: 40px;
-    width: 350px;
+    width: 390px;
     margin-bottom: 10px;
 }
 
@@ -66,7 +66,8 @@ body {
     padding-left: 25px;
 }
 
-.shuffle-rack-button {
+.rack-button {
+    float: left;
     height: 100%;
 }
 
