--- a/static/css/round.css
+++ b/static/css/round.css
@@ -72,24 +72,52 @@ body {
     height: 100%;
 }
 
-.history {
+.round-table {
     position:relative;
-    padding-top: 15px;
     margin:auto;
     overflow: auto;
-    max-height: 500px;
+    max-height: 490px;
+    width: 75%;
+    border:1px solid #000000;
+}
+
+.round-table table {
+  width: 100%;
+}
+
+.round-table tr:nth-child(odd){ background-color:#ffaa56; }
+.round-table tr:nth-child(even){ background-color:#ffffff; }
+
+.round-table td{
+	vertical-align:middle;
+	border:1px solid #000000;
+	border-width:0px 1px 1px 0px;
+  padding: 5px;
+	text-align:left;
+	font-size:10px;
+	font-family:Arial;
+	font-weight:bold;
+	color:#000000;
+}
+
+.round-table tr:last-child td{
+	border-width:0px 1px 0px 0px;
+}
+
+.round-table tr td:last-child{
+	border-width:0px 0px 1px 0px;
+}
+
+.round-table tr:last-child td:last-child{
+	border-width:0px 0px 0px 0px;
 }
 
 .submit-move-button {
     margin-right: 10px;
 }
 
-.score-table {
-    margin: auto;
-}
-
-.score-table-border {
-    border: 1px solid black;
+.score-board {
+  margin-bottom: 20px;
 }
 
 .highlighted-slot {
