--- a/static/css/round.css
+++ b/static/css/round.css
@@ -1,3 +1,12 @@
+#scrabbleground {
+    position: absolute;
+    top: 30px;
+    width: 100%;
+    height: calc(100% - 30px);
+    overflow: auto;
+    z-index: 10;
+}
+
 body {
   font: 12px 'Noto Sans','Lucida Grande','Lucida Sans Unicode',Geneva,Verdana,Sans-Serif
 }
@@ -45,10 +54,9 @@ body {
 }
 
 .potential-score {
-    position: relative;
-    width: 150px;
     margin: auto;
-
+    text-align: center;
+    text-transform: uppercase;
 }
 
 .rack-slot {
